Ajuste: DialogFile en desarrollo

--- a/src/app/dialog-file/dialog-file.component.html
+++ b/src/app/dialog-file/dialog-file.component.html
@@ -1,1 +1,3 @@
-<p>dialog-file works!</p>
+<p-fileUpload #form name="file" customUpload="true"
+  [showCancelButton]="false" chooseLabel="Seleccionar" uploadLabel="Cargar" multiple="multiple" maxFileSize="10000000">
+</p-fileUpload>
