--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,6 +1,32 @@
 <p-sidebar [(visible)]="visibleMenu" [modal]="false" [baseZIndex]="10">
-    <br>
-    <p-panelMenu [model]="menu" [style]="{'width':'100%'}"></p-panelMenu>
+  <br>
+  <p-panelMenu [model]="menu" [style]="{'width':'100%'}"></p-panelMenu>
 </p-sidebar>
 <button id="menu" pButton type="button" (click)="visibleMenu = true" icon="pi pi-arrow-right"></button>
+<!-- <div id="mainWindow">
+  <div>
+    <div style="padding-left:4px;">
+      <p>
+        Download shapefile from
+        <a href="https://bsvensson.github.io/various-tests/shp/drp_county_boundary.zip">here.</a>
+      </p>
+      <p>Add a zipped shapefile to the map.</p>
+      <p>
+        Visit the
+        <a target="_blank" href="https://doc.arcgis.com/en/arcgis-online/reference/shapefiles.htm">Shapefiles</a>
+        help topic for information and limitations.
+      </p>
+      <form enctype="multipart/form-data" method="post" id="uploadForm">
+        <div class="field">
+          <label class="file-upload">
+            <span><strong>Add File</strong></span>
+            <input type="file" name="file" id="inFile" />
+          </label>
+        </div>
+      </form>
+      <span class="file-upload-status" style="opacity:1;" id="upload-status"></span>
+      <div id="fileInfo"></div>
+    </div>
+  </div>
+</div> -->
 <div #mapViewNode></div>
