Ajuste: Implementacion area y linear measurement

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -2,8 +2,8 @@
     <br>
     <img src="logo-anh-p.png" (click)="visibleMenu = false">
     <div id="helps">
-        <button pButton type="button" pTooltip="Navegación"
-        tooltipPosition="bottom" icon="pi pi-spin pi-compass" class="ui-button-success"></button>
+        <button pButton type="button" icon="pi pi-spin pi-compass" class="ui-button-success" pTooltip="Navegación"
+            tooltipPosition="bottom"></button>
         <button pButton type="button" icon="fas fa-ruler" class="ui-button-info" pTooltip="Tomar Medidas"
             tooltipPosition="bottom"></button>
         <button pButton type="button" icon="fas fa-hand-pointer" class="ui-button-warning" pTooltip="Seleccionar"
