--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -16,4 +16,5 @@
     </div>
 </p-sidebar>
 <button id="menu" type="button" (click)="visibleMenu = true"></button>
+<!-- <div id="loading" class="loading-machin"></div> -->
 <div #mapViewNode></div>
