Ajuste: Avance en ubicación y TimeSlider

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -16,5 +16,13 @@
     </div>
 </p-sidebar>
 <button id="menu" type="button" (click)="visibleMenu = true"></button>
-<!-- <div id="loading" class="loading-machin"></div> -->
+<div id="loading" class="loading-machin"></div>
 <div #mapViewNode></div>
+<div id="ts-tierras-wrapper" align="center">
+  <div class="ts-bg">
+    <div id="ts-tierras" class="ui-slider-orange">
+      <div class="ts-label"></div>
+    </div>
+  </div>
+</div>
+
