--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -75,3 +75,35 @@ p-sidebar {
 	animation: play 1.5s steps(10) infinite;
 	z-index: 1001;
 }
+
+
+#ts-tierras-wrapper {
+	position: absolute;
+	bottom: 25px;
+	top: auto;
+	width: 100%;
+}
+#ts-tierras-wrapper .ts-bg {
+	position: relative;
+	max-width: 40%;
+	margin-left: 200px;
+	margin-right: 300px;
+	background-color: rgba(255,255,255,0.6);
+	height: 45px;
+}
+#ts-tierras {
+	position: relative;
+	opacity: 1.0;
+	text-align: center;
+	top: 29px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+#ts-tierras .ts-label {
+	bottom: 14px;
+	display: block;
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+}
