Ajuste: Loading comentado

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -16,7 +16,7 @@
     </div>
 </p-sidebar>
 <button id="menu" type="button" (click)="visibleMenu = true"></button>
-<div id="loading" class="loading-machin"></div>
+<!-- <div id="loading" class="loading-machin"></div> -->
 <div #mapViewNode></div>
 <div id="ts-tierras-wrapper" align="center">
   <div class="ts-bg">
