--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -63,7 +63,7 @@ p-sidebar {
     }
 }
 
-.loading-machin {
+/* .loading-machin {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -74,7 +74,7 @@ p-sidebar {
 	margin-left: -72px;
 	animation: play 1.5s steps(10) infinite;
 	z-index: 1001;
-}
+} */
 
 
 #ts-tierras-wrapper {
