--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -21,7 +21,7 @@
 <div id="ts-tierras-wrapper" align="center">
   <div class="ts-bg">
     <div id="ts-tierras" class="ui-slider-orange">
-      <div class="ts-label"></div>
+      <div class="ts-label">{{nameLayer}}</div>
     </div>
   </div>
 </div>
