Se avanza en la funcionalidad de extraer capa

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -25,4 +25,7 @@
     </div>
   </div>
 </div>
+<p-dialog header="Title" [(visible)]="display" [resizable]="false">
+  <div id="sketch"></div>
+</p-dialog>
 
