Ajustre: Ajuste en el componente de extracción de capas

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -65,6 +65,9 @@ p-sidebar {
     #menu {
         display: none;
     }
+    #ts-tierras-wrapper {
+      display: none;
+    }
 }
 
 .loading-machin {
