--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -13,7 +13,7 @@
             tooltipPosition="bottom"></button>
     </div>
     <div style="overflow-y: auto;">
-        <p-panelMenu [model]="menu" [style]="{'width':'100%', 'height': '500px'}"></p-panelMenu>
+        <p-panelMenu [model]="menu" [style]="{'width':'100%', 'height': '500px'}" [multiple]="false"></p-panelMenu>
     </div>
 </p-sidebar>
 <button id="menu" type="button" (click)="visibleMenu = true"></button>
@@ -26,11 +26,12 @@
     </div>
   </div>
 </div>
-<p-dialog header="Extracción de datos" [(visible)]="display" [resizable]="false" [positionLeft]="'200'">
+<p-dialog header="Extracción de datos" [(visible)]="display" [resizable]="false" (onHide)="onHideDialogExtract()" [positionTop]="0">
   <div id="infoDiv">
     <p>1. Defina el área de interés</p>
     <p-dropdown [options]="optionsPolygon" optionLabel="name" placeholder="Selección en la capa actual" (onChange)="onChangeSelect()" [(ngModel)]="selectedPolygon"></p-dropdown>
     <p-button label="Limpiar área" class="clearGraphics" [disabled]="!clearGraphic" (onClick)="clearGraphics()"></p-button>
+    <p-button class="clearGraphics" [disabled]="selectedPolygon === undefined" icon="pi pi-undo" (onClick)="onChangeSelect()" pTooltip="Volver a dibujar" tooltipPosition="bottom"></p-button>
     <p>2. Seleccione las capas a extraer</p>
     <p-multiSelect [options]="optionsLayers" defaultLabel="Click aquí..." selectedItemsLabel="{0} items seleccionados" [(ngModel)]="selectedLayers"></p-multiSelect>
     <br>
