Ajuste: Se agrego info en los dialogos, implementacion de medicion en dialogo e implementacion de analisis de cobertura

--- a/src/app/dialog-file/dialog-file.component.html
+++ b/src/app/dialog-file/dialog-file.component.html
@@ -5,3 +5,6 @@
   <input type="file" name="file" id="upload-file-input" />
   <button type="submit">Cargar</button>
 </form>
+<br>
+<p-message id="infoMedicion" severity="info"
+  text="Seleccione un <b>archivo local</b> para cargarlo como una capa sobre el mapa"></p-message>
