--- a/src/app/dialog-urlservice/dialog-urlservice.component.html
+++ b/src/app/dialog-urlservice/dialog-urlservice.component.html
@@ -22,3 +22,6 @@
         </div>
     </div>
 </form>
+<br>
+<p-message id="infoMedicion" severity="info"
+  text="Ingrese la <b>dirección URL</b> del servicio que desea cargar"></p-message>
