--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -53,6 +53,20 @@
   <p-button icon="pi pi-globe" [disabled]="dptosSelected.length == 0" label="Iniciar Analisis de Cobertura"></p-button>
 </p-dialog>
 
+<p-dialog header="Zona de Influencia (Buffer)" [(visible)]="displayBuffer" [resizable]="false" (onHide)="onHideDialogBuffer()">
+  <div id="div">
+    <p>1. Defina la anchura deseada</p>
+    <input id="input" type="text" size="18" pInputText [(ngModel)]="bufDistance" placeholder="Ingrese un número">
+    &nbsp;
+    <p-dropdown [options]="optionsBuffer" optionLabel="name" [(ngModel)]="selectedBuffer">
+    </p-dropdown>
+    <p>2. Dibuje la geometría para la Zona de Influencia</p>
+    <p-selectButton [options]="modes" [(ngModel)]="selectedBufferSketch" (onChange)="onChangeSelectSketchBuffer()"></p-selectButton>
+    <p-button label="Limpiar" class="clearGraphics" [disabled]="!clearGraphic" (onClick)="clearGraphics()">
+    </p-button>
+    <br>
+  </div>
+</p-dialog>
 
 <div id="attributeTable">
   <p-table #dt *ngIf="loadLayers == 8" [value]="featureDptos" [(selection)]="dptosSelected" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
