--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -17,7 +17,7 @@
   </div>
 </p-sidebar>
 <button id="menu" type="button" (click)="visibleMenu = true"></button>
-<div *ngIf="loadLayers != 8" id="loading" class="loading-machin"></div>
+<div *ngIf="loadLayers != 8 || makingWork" id="loading" class="loading-machin"></div>
 <div #mapViewNode></div>
 <div id="ts-tierras-wrapper" align="center">
   <div class="ts-bg">
@@ -113,4 +113,3 @@
     </ng-template>
   </p-table>
 </div>
-{{selectedLayersList}}
