Ajuste: Seleccion de capa

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -1,13 +1,24 @@
 @import url('https://js.arcgis.com/4.12/esri/css/main.css');
 #menu {
-    z-index: 5;
-    position: absolute;
     background: #ffffff;
     background-image: url("../../assets/logo-anh-p.png");
     background-repeat: no-repeat;
     width: 160px;
     padding: 29px;
     height: 54px;
+}
+
+#menu-info {
+    z-index: 5;
+    background: #ffffff;
+    text-align: center;
+    position: absolute;
+    width: 160px;
+    height: 54px;
+}
+
+#panel-selected-layer {
+    padding: 8px 0px 8px 0px;
 }
 
 ::ng-deep .ui-sidebar-active {
