--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -140,14 +140,19 @@
   </p-table>
 </div>
 
-<div id="help">
-  <li id="help-button" data-rel="popover" data-placement="top"
-    data-original-title="&lt;i class='icon-comment bigger-120'&gt;&lt;/i&gt; &nbsp;<b>Bienvenido al Geovisor ANH</b>"
-    data-content="<b>Haga clic</b> sobre los elementos de su interés en el mapa o... <ul> <li> <b>Encuentre arriba</b> lo que busca.</li> <li> <b>Use las herramientas</b> del menú de la izquierda.</li><li> Seleccione a la derecha <b>la capa de trabajo</b> y vea las <b>convenciones del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li><ul>"
-    data-container="body">
-  <li id="help-button">
-    <a class="png-icon-help">
-      <i></i>
-    </a>
-  </li>
+<div id="help" class="esri-widget">
+  <h3>
+    <div class="title-help">
+      <i class="pi pi-comment" style="font-size: 2em"></i>
+      <span>Bienvenido al Geovisor ANH</span>
+    </div>
+    <div class="body-help">
+      Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
+        <li> <b>Encuentra arriba</b> lo que buscas.</li>
+        <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
+        <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
+            del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
+      </ul>
+    </div>
+  </h3>
 </div>
