--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -157,5 +157,20 @@
             del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
       </ul>
     </div>
+    <div class="p-grid p-dir-col">
+      <div class="p-col">
+        <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised"
+          icon="fa fa-book-open"></button>
+      </div>
+      <div class="p-col">
+        <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
+          icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+      </div>
+    </div>
   </h3>
 </div>
+
+<p-dialog header="Acerca de..." [(visible)]="about">
+  <app-dialog-about></app-dialog-about>
+</p-dialog>
+
