--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,9 +1,5 @@
 <p-toast></p-toast>
-<input type="hidden" [(ngModel)]="layerList.selectedItems.items[0].layer.title"
-  (ngModelChange)="changeAttrTable($event)"
-  *ngIf="layerList != undefined && layerList.selectedItems.items[0] != undefined">
 <p-sidebar [(visible)]="visibleMenu" [modal]="false" [baseZIndex]="10">
-  <br>
   <img src="logo-anh-p.png" (click)="visibleMenu = false">
   <div id="panel-selected-layer" class="esri-widget"
     *ngIf="layerList != undefined && layerList.selectedItems.items[0] != undefined">
@@ -115,7 +111,7 @@
 </p-dialog>
 
 <p-dialog header="Tabla de Atributos" [(visible)]="displayTable" [resizable]="true" (onHide)="onHideDialogMedicion()">
-  <p-table [style]="{width: '500px'}" selectionMode="multiple" #dt [columns]="columnsTable" *ngIf="loadLayers == 8"
+  <p-table [style]="{width: '500px'}" selectionMode="multiple" #dt [columns]="columnsTable" *ngIf="displayTable"
     [dataKey]="dataKey()" [value]="featureDptos" [scrollable]="true" [(selection)]="featuresSelected"
     (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" scrollHeight="200px">
     <ng-template pTemplate="colgroup" let-columns>
@@ -139,35 +135,34 @@
   </p-table>
 </p-dialog>
 
-<div id="attributeTable" style="width: 1500px;">
-
-</div>
-
 <div id="help" class="esri-widget">
-  <h3>
-    <div class="title-help">
-      <i class="pi pi-comment" style="font-size: 2em"></i>
-      <span>Bienvenido al Geovisor ANH</span>
-    </div>
-    <div class="body-help">
-      Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
-        <li> <b>Encuentra arriba</b> lo que buscas.</li>
-        <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
-        <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
-            del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
-      </ul>
-    </div>
-    <div class="p-grid p-dir-col">
-      <div class="p-col">
-        <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised"
-          icon="fa fa-book-open" (click)="onShowGuide()"></button>
+  <div *ngIf="loadLayers == 8">
+
+    <h3>
+      <div class="title-help">
+        <i class="pi pi-comment" style="font-size: 2em"></i>
+        <span>Bienvenido al Geovisor ANH</span>
       </div>
-      <div class="p-col">
-        <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
-          icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+      <div class="body-help">
+        Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
+          <li> <b>Encuentra arriba</b> lo que buscas.</li>
+          <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
+          <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
+              del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
+        </ul>
       </div>
-    </div>
-  </h3>
+      <div class="p-grid p-dir-col">
+        <div class="p-col">
+          <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised"
+            icon="fa fa-book-open" (click)="onShowGuide()"></button>
+        </div>
+        <div class="p-col">
+          <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
+            icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+        </div>
+      </div>
+    </h3>
+  </div>
 </div>
 
 <p-dialog header="Acerca de..." [(visible)]="about">
